ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # - path: /prometheus(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: prometheus-server
      #       port:
      #         number: 9090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-microservice
            port:
              number: 3000
    # host: example.com
